--- a/calendar/index.html
+++ b/calendar/index.html
@@ -39,7 +39,7 @@
             </td>
             <td>
                 <span class="number">4</span>
-                <span class="event single-day pink-color">Test</span>
+                <span class="event single-day pink-color">Work</span>
                 <span class="event single-day salmon-color">Interview</span>
                 <span class="event event-end green-color"></span>
             </td>
