Changed description text and markup

--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,65 +2,84 @@
 <html>
 
 <head>
-    <title>Calendar</title>
+    <title>sidebar</title>
     <link rel="stylesheet" type="text/css" href="style.css">
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+    <script src="https://kit.fontawesome.com/7c51dfb56c.js" crossorigin="anonymous"></script>
+</head>
 
 <body>
+    <div class="conteiner">
+        <aside>
+            <div class="aside__header">
+                <img src="img/woman.jpg" alt="woman" class="aside__header-pic">
+                <p>Britney Spears</p>
+            </div>
+            <ul class="aside__list">
+                <li>
+                    <a href="#!" class="active__home"><i class="fa fa-home aside__icon fa-fw"
+                            aria-hidden="true"></i>Home</a>
+                </li>
+                <li>
+                    <a href="#!"><i class="fa fa-download aside__icon fa-fw" aria-hidden="true"></i> Download</a>
+                </li>
+                <li>
+                    <a href="#!"><i class="fa fa-gift aside__icon fa-fw" aria-hidden="true"></i>Gift Code</a>
+                </li>
+                <li> <a href="#!"><i class="fa fa-trophy aside__icon fa-fw" aria-hidden="true"></i> Top Review</a>
+                </li>
+            </ul>
+        </aside>
 
-
-    <table>
-        <tr>
-            <th class="mon-radius">Mon</th>
-            <th>Tue</th>
-            <th>Wen</th>
-            <th>Thu</th>
-            <th>Fri</th>
-            <th>Sat</th>
-            <th class="sun-radius">Sun</th>
-        </tr>
-        <tr class="calendar">
-            <td>
-                <span class="number">1</span>
-                <span class="event single-day salmon-color">Brunch</span>
-                <span class="event event-start blue-color"></span>
-                <span class="event event-start green-color"></span>
-            </td>
-            <td>
-                <span class="number">2</span>
-                <span class="event"></span>
-                <span class="event event-middle blue-color">Vacation</span>
-                <span class="event event-middle green-color">Morning Photography</span>
-            </td>
-            <td>
-                <span class="number">3</span>
-                <span class="event"></span>
-                <span class="event event-end blue-color"></span>
-                <span class="event event-middle green-color"></span>
-            </td>
-            <td>
-                <span class="number">4</span>
-                <span class="event single-day pink-color">Work</span>
-                <span class="event single-day salmon-color">Interview</span>
-                <span class="event event-end green-color"></span>
-            </td>
-            <td>
-                <span class="number">5</span>
-                <span class="event event-start green-color"></span>
-            </td>
-            <td>
-                <span class="number">6</span>
-                <span class="event event-end green-color">Workshop</span>
-                <span class="event event-start pink-color"></span>
-            </td>
-            <td>
-                <span class="number">7</span>
-                <span class="event single-day blue-color">Billi Birthday</span>
-                <span class="event event-end pink-color">Celebration</span>
-            </td>
-        </tr>
-    </table>
-
+        <main>
+            <p>Baby, can't you see I'm calling?
+                A guy like you should wear a warning
+                It's dangerous, I'm falling
+                There's no escape, I can't wait
+                I need a hit, baby, give me it
+                You're dangerous, I'm loving it
+                Too high, can't come down
+                Losing my head, spinnin' 'round and 'round
+                Do you feel me now?
+                With a taste of your lips, I'm on a ride
+                You're toxic, I'm slippin' under
+                With a taste of a poison paradise
+                I'm addicted to you
+                Don't you know that you're toxic?
+                And I love what you do
+                Don't you know that you're toxic?
+                It's getting late to give you up
+                I took a sip from my devil's cup
+                Slowly, it's taking over me
+                Too high, can't come down
+                It's in the air and it's all around
+                Can you feel me now?
+                With a taste of your lips, I'm on a ride
+                You're toxic, I'm slippin' under
+                With a taste of a poison paradise
+                I'm addicted to you
+                Don't you know that you're toxic?
+                And I love what you do
+                Don't you know that you're toxic?
+                Don't you know that you're toxic?
+                Taste of your lips, I'm on a ride
+                You're toxic, I'm slippin' under
+                With a taste of a poison paradise
+                I'm addicted to you
+                Don't you know that you're toxic?
+                With a taste of your lips, I'm on a ride
+                You're toxic, I'm slippin' under (toxic)
+                With a taste of a poison paradise
+                I'm addicted to you
+                Don't you know that you're toxic?
+                Intoxicate me now, with your lovin' now
+                I think I'm ready now, I think I'm ready now
+                Intoxicate me now, with your lovin' now
+                I think I'm ready now
+            </p>
+        </main>
+    </div>
 </body>
-</head>
 
 </html>
