--- a/calendar/index.html
+++ b/calendar/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-    <title>sidebar</title>
+    <title>Sidebar</title>
     <link rel="stylesheet" type="text/css" href="style.css">
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
@@ -24,7 +24,7 @@
                     <a href="#!"><i class="fa fa-download aside__icon fa-fw" aria-hidden="true"></i> Download</a>
                 </li>
                 <li>
-                    <a href="#!"><i class="fa fa-gift aside__icon fa-fw" aria-hidden="true"></i>Gift Code</a>
+                    <a href="#!"><i class="fa fa-gift aside__icon fa-fw" aria-hidden="true"></i>Gifts</a>
                 </li>
                 <li> <a href="#!"><i class="fa fa-trophy aside__icon fa-fw" aria-hidden="true"></i> Top Review</a>
                 </li>
