Changed description page button

--- a/table/index.html
+++ b/table/index.html
@@ -22,7 +22,7 @@
     <header>
         <nav class="navbar navbar-expand-md navbar-dark bg-dark  fixed-top">
             <div class="container">
-                <a class="navbar-brand" href="#">Start Bootstrap</a>
+                <a class="navbar-brand" href="#">The largest countries in the world by area</a>
                 <button class="navbar-toggler" type="button" data-toggle="collapse"
                     data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
                     aria-label="Toggle navigation">
@@ -51,12 +51,8 @@
     <main>
         <div class="container">
             <div class="jumbotron bg-light">
-                <h1 class="display-2">A Warm Welcome!</h1>
-                <p class="text-muted lead">Something short and leading about the collection below—its contents, the
-                    creator,
-                    etc.
-                    Make it short and
-                    sweet, but not too short so folks don’t simply skip over it entirely.
+                <h1 class="display-2">The largest countries in the world by area</h1>
+                <p class="text-muted lead">The natural wealth of the Earth strikes with an extraordinary variety of landscapes. And it is not at all necessary to go far beyond the borders of the country. The vast territories of some states allow you to find yourself in different climatic zones and meet different terrain, simply by traveling from one region of the country to another. We list the 20 largest states by area.
                 </p>
                 <button class="btn btn-primary my-2">Call to action</button>
             </div>
@@ -68,10 +64,10 @@
                     <div class="card  mb-4">
                         <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
                         <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">Card tittle</h5>
-                            <p class="card-text px-4 pb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                Magni,
-                                molestias.</p>
+                            <h5 class="card-tittle pt-4">1. Russia: 17,125,192 km²</h5>
+                            <p class="card-text px-4 pb-4">The largest state on our planet, located in two parts of the world, both in Asia (75%) and in Europe (25%), extends from the icy expanses of the Arctic to the subtropics of the southern border. The European part covers an area from Central Europe in the west to the Ural Mountains in the east, washed by the Baltic and Barents Seas in the north, the Black and Caspian - in the south. Almost all of this region lies on the East European Plain, rising only in the southern part of the country, at the foot of the Caucasus Mountains.
+
+                                The Asian part is separated from North America by the Bering Strait. The northernmost tundra regions lie in the permafrost zone. The vast Russian territory south of the tundra is covered by coniferous forests of the Siberian taiga, open grassy steppes and forest-steppes in the center of the European part, deserts near the Caspian Sea and mountain ranges in the east. Due to the harsh climate and complex landscape in remote places, nature continues to dominate man, and some corners have not yet been explored.</p>
                             <div class="border-top w-100 bg-light">
                                 <a href="#" class="btn btn-primary my-3">Find out more!</a>
                             </div>
@@ -82,10 +78,8 @@
                     <div class="card  mb-4">
                         <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
                         <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">Card tittle</h5>
-                            <p class="card-text px-4 pb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                Magni,
-                                molestias.</p>
+                            <h5 class="card-tittle pt-4">2. Canada: 9,984,669 km²</h5>
+                            <p class="card-text px-4 pb-4">The second largest state in the world is washed by the waters of the harsh Arctic, Atlantic and Pacific oceans. The country of numerous fjords and hundreds of islands - the peaks of the submerged parts of the Coast Range. Beyond the Arctic Circle lies the rugged Canadian Arctic Archipelago. The mainland consists of the Canadian Shield with a large depression (Hudson Bay). The former prairies of the Great Plains are being used as farmland. In the west, they border on the 800-kilometer strip of the Canadian Cordillera. Part of the state border with the United States passes through the famous Great Lakes. The diversity of Canada's natural zones is unique - from the northern territories of permafrost to the mighty forests on the Pacific coast.</p>
                             <div class="border-top w-100 bg-light">
                                 <a href="#" class="btn btn-primary my-3">Find out more!</a>
                             </div>
