--- a/table/index.html
+++ b/table/index.html
@@ -90,10 +90,8 @@
                     <div class="card  mb-4">
                         <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
                         <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">Card tittle</h5>
-                            <p class="card-text px-4 pb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                Magni,
-                                molestias.</p>
+                            <h5 class="card-tittle pt-4">3. United States of America: 9,826,067 km²</h5>
+                            <p class="card-text px-4 pb-4">The main territory of the largest state in the world is located on the North American continent. The landscape of the third largest country is extremely diverse - from vast plains in the east to prairies in the center and mountains in the west. Geographical zones are located parallel to the meridians (the Cordillera in the west, the Great Plains, the Central Plain, the Coastal Plain and the Apalachians in the east). The vast area of the country covers all climatic natural zones of the northern hemisphere - from the subarctic in Alaska to the equatorial in Hawaii.</p>
                             <div class="border-top w-100 bg-light">
                                 <a href="#" class="btn btn-primary my-3">Find out more!</a>
                             </div>
@@ -104,10 +102,8 @@
                     <div class="card  mb-4">
                         <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
                         <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">Card tittle</h5>
-                            <p class="card-text px-4 pb-4">Lorem ipsum dolor sit amet consectetur, adipisicing elit.
-                                Magni,
-                                molestias.</p>
+                            <h5 class="card-tittle pt-4">4. China: 9,596,962 km²</h5>
+                            <p class="card-text px-4 pb-4">The area of ​​western China is made up of vast mountainous territories, central regions with valleys and highlands, and further eastward to the very coast, lowlands extend. Almost all types of landscapes are found here - Himalayan glaciers, steppes, deserts and tropical forests. The Himalayas form a natural barrier that protects the Indian subcontinent and the rainforests of Southeast Asia from the cold air from the north. There is a gigantic river system in eastern China. Around the world's largest river, the Yangtze, which crosses Tibet and seven provinces, one of the most ancient civilizations was born thousands of years ago.</p>
                             <div class="border-top w-100 bg-light">
                                 <a href="#" class="btn btn-primary my-3">Find out more!</a>
                             </div>
