Changed description columns

--- a/table/index.html
+++ b/table/index.html
@@ -110,6 +110,18 @@
                         </div>
                     </div>
                 </div>
+                <div class="col-md-3 col-sm-6">
+                    <div class="card  mb-4">
+                        <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
+                        <div class="card-body p-0 text-center">
+                            <h5 class="card-tittle pt-4">5. Brazil: 8,515,766 km²</h5>
+                            <p class="card-text px-4 pb-4">The highly developed state of South America. The fifth largest country in the world is the leader in the production and export of coffee. In the south of the coast of the Atlantic Ocean stretch highlands. The northern part is located on an alluvial plain formed from the deposits of the largest river in the world with a huge volume of water - the Amazon. It absorbs thousands of tributaries on its way. The Amazonian selva has retained only a part of its original appearance and the original diversity of flora and fauna. The country is located in three geographical zones. The smallest of them is tropical forests in the Guiana Highlands. The central part is Amazonia, the Brazilian Highlands belongs to the south.</p>
+                            <div class="border-top w-100 bg-light">
+                                <a href="#" class="btn btn-primary my-3">Find out more!</a>
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
 
     </main>
