--- a/picture/index.html
+++ b/picture/index.html
@@ -2,14 +2,14 @@
 <html>
 
 <head>
-    <title>homework</title>
+    <title>Homework</title>
     <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
 
     <img class="img" src="1043-400x400.jpg" alt="Лес,река,горы">
 
-    <p class="Text">A nice day in the mountain</p>
+    <p class="Text">Have a nice day</p>
 
 </body>
 </head>
