--- a/table/index.html
+++ b/table/index.html
@@ -1,145 +1,68 @@
-<!doctype html>
-<html lang="en">
+<!DOCTYPE html>
+<html>
 
 <head>
-    <!-- Required meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css"
-        integrity="sha384-JcKb8q3iqJ61gNV9KGb8thSsNjpSL0n8PARn9HuZOnIxN0hoP+VmmDGMN5t9UJ0Z" crossorigin="anonymous">
-    <link rel="stylesheet" href="style.css" type="text/css">
-    <title>Start page</title>
-
-    <style>
-        .jumbotron {
-            margin-top: 6rem;
-        }
-    </style>
-</head>
+    <title>zadanie7</title>
+    <link rel="stylesheet" type="text/css" href="style.css">
 
 <body>
-    <header>
-        <nav class="navbar navbar-expand-md navbar-dark bg-dark  fixed-top">
-            <div class="container">
-                <a class="navbar-brand" href="#">The largest countries in the world by area</a>
-                <button class="navbar-toggler" type="button" data-toggle="collapse"
-                    data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false"
-                    aria-label="Toggle navigation">
-                    <span class="navbar-toggler-icon"></span>
-                </button>
-                <div class="collapse navbar-collapse " id="navbarSupportedContent">
-                    <ul class="navbar-nav ml-auto ">
-                        <li class="nav-item active">
-                            <a class="nav-link" href="!#">Home </a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="!#">About</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="!#">Service</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link" href="!#">Contact</a>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </nav>
-    </header>
+    <div>
+        <div class="backgorund-links">
+            <div class="links">
+                <h3 class="under">Ссылки</h3>
+                <ol>
 
-    <main>
-        <div class="container">
-            <div class="jumbotron bg-light">
-                <h1 class="display-2">The largest countries in the world by area</h1>
-                <p class="text-muted lead">The natural wealth of the Earth strikes with an extraordinary variety of landscapes. And it is not at all necessary to go far beyond the borders of the country. The vast territories of some states allow you to find yourself in different climatic zones and meet different terrain, simply by traveling from one region of the country to another. We list the 20 largest states by area.
-                </p>
-                <button class="btn btn-primary my-2">Call to action</button>
+                    <li> <a href="https://www.it-academy.by/">it-Academy</a></li>
+                    <li> <a href="https://www.google.by/">Google</a></li>
+                    <li> <a href="http://htmlbook.ru/">Htmlbook</a></li>
+                    <li> <a href="https://ru.wikipedia.org/">Wikipedia</a></li>
+
+                </ol>
+            </div>
+
+            <div class="links">
+                <h3 class="under">Статьи</h3>
+                <ol>
+
+                    <li> <a href="#s1">Статья 1</a></li>
+                    <li> <a href="#s2">Статья 2</a></li>
+                    <li> <a href="#s3">Статья 3</a></li>
+                    <li> <a href="#s4">Статья 4</a></li>
+
+                </ol>
             </div>
         </div>
+    </div>
 
-        <div class="container">
-            <div class="row ">
-                <div class="col-md-3 col-sm-6">
-                    <div class="card  mb-4">
-                        <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
-                        <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">1. Russia: 17,125,192 km²</h5>
-                            <p class="card-text px-4 pb-4">The largest state on our planet, located in two parts of the world, both in Asia (75%) and in Europe (25%), extends from the icy expanses of the Arctic to the subtropics of the southern border. The European part covers an area from Central Europe in the west to the Ural Mountains in the east, washed by the Baltic and Barents Seas in the north, the Black and Caspian - in the south. Almost all of this region lies on the East European Plain, rising only in the southern part of the country, at the foot of the Caucasus Mountains.
-
-                                The Asian part is separated from North America by the Bering Strait. The northernmost tundra regions lie in the permafrost zone. The vast Russian territory south of the tundra is covered by coniferous forests of the Siberian taiga, open grassy steppes and forest-steppes in the center of the European part, deserts near the Caspian Sea and mountain ranges in the east. Due to the harsh climate and complex landscape in remote places, nature continues to dominate man, and some corners have not yet been explored.</p>
-                            <div class="border-top w-100 bg-light">
-                                <a href="#" class="btn btn-primary my-3">Find out more!</a>
-                            </div>
-                        </div>
-                    </div>
+    <div class="backgorund-art2">
+        <div class="backgorund-art">
+            <div>
+                <div class="articles">
+                    <h3 id="s1">Статья 1</h3>
+                    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Nulla non gravida massa, sit amet
+                        commodo nisi... </p>
                 </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="card  mb-4">
-                        <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
-                        <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">2. Canada: 9,984,669 km²</h5>
-                            <p class="card-text px-4 pb-4">The second largest state in the world is washed by the waters of the harsh Arctic, Atlantic and Pacific oceans. The country of numerous fjords and hundreds of islands - the peaks of the submerged parts of the Coast Range. Beyond the Arctic Circle lies the rugged Canadian Arctic Archipelago. The mainland consists of the Canadian Shield with a large depression (Hudson Bay). The former prairies of the Great Plains are being used as farmland. In the west, they border on the 800-kilometer strip of the Canadian Cordillera. Part of the state border with the United States passes through the famous Great Lakes. The diversity of Canada's natural zones is unique - from the northern territories of permafrost to the mighty forests on the Pacific coast.</p>
-                            <div class="border-top w-100 bg-light">
-                                <a href="#" class="btn btn-primary my-3">Find out more!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="card  mb-4">
-                        <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
-                        <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">3. United States of America: 9,826,067 km²</h5>
-                            <p class="card-text px-4 pb-4">The main territory of the largest state in the world is located on the North American continent. The landscape of the third largest country is extremely diverse - from vast plains in the east to prairies in the center and mountains in the west. Geographical zones are located parallel to the meridians (the Cordillera in the west, the Great Plains, the Central Plain, the Coastal Plain and the Apalachians in the east). The vast area of the country covers all climatic natural zones of the northern hemisphere - from the subarctic in Alaska to the equatorial in Hawaii.</p>
-                            <div class="border-top w-100 bg-light">
-                                <a href="#" class="btn btn-primary my-3">Find out more!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="card  mb-4">
-                        <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
-                        <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">4. China: 9,596,962 km²</h5>
-                            <p class="card-text px-4 pb-4">The area of ​​western China is made up of vast mountainous territories, central regions with valleys and highlands, and further eastward to the very coast, lowlands extend. Almost all types of landscapes are found here - Himalayan glaciers, steppes, deserts and tropical forests. The Himalayas form a natural barrier that protects the Indian subcontinent and the rainforests of Southeast Asia from the cold air from the north. There is a gigantic river system in eastern China. Around the world's largest river, the Yangtze, which crosses Tibet and seven provinces, one of the most ancient civilizations was born thousands of years ago.</p>
-                            <div class="border-top w-100 bg-light">
-                                <a href="#" class="btn btn-primary my-3">Find out more!</a>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-3 col-sm-6">
-                    <div class="card  mb-4">
-                        <img src="https://picsum.photos/500/325" alt="" class="card-img-top">
-                        <div class="card-body p-0 text-center">
-                            <h5 class="card-tittle pt-4">5. Brazil: 8,515,766 km²</h5>
-                            <p class="card-text px-4 pb-4">The highly developed state of South America. The fifth largest country in the world is the leader in the production and export of coffee. In the south of the coast of the Atlantic Ocean stretch highlands. The northern part is located on an alluvial plain formed from the deposits of the largest river in the world with a huge volume of water - the Amazon. It absorbs thousands of tributaries on its way. The Amazonian selva has retained only a part of its original appearance and the original diversity of flora and fauna. The country is located in three geographical zones. The smallest of them is tropical forests in the Guiana Highlands. The central part is Amazonia, the Brazilian Highlands belongs to the south.</p>
-                            <div class="border-top w-100 bg-light">
-                                <a href="#" class="btn btn-primary my-3">Find out more!</a>
-                            </div>
-                        </div>
-                    </div>
+                <div class="articles">
+                    <h3 id="s2">Статья 2</h3>
+                    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Nulla non gravida massa, sit amet
+                        commodo nisi... </p>
                 </div>
             </div>
-
-    </main>
-
-    <footer class="bg-dark text-white text-center px-5 py-5">
-        <p>Coppyrigt 169 Your Website 2020</p>
-    </footer>
-    <!-- Optional JavaScript -->
-    <!-- jQuery first, then Popper.js, then Bootstrap JS -->
-    <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
-        integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.1/dist/umd/popper.min.js"
-        integrity="sha384-9/reFTGAW83EW2RDu2S0VKaIzap3H66lZH81PoYlFhbGU+6BZp6G7niu735Sk7lN"
-        crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.2/js/bootstrap.min.js"
-        integrity="sha384-B4gt1jrGC7Jh4AgTPSdUtOBvfO8shuf57BaghqFfPlYxofvL8/KUEfYiJOMMV+rV"
-        crossorigin="anonymous"></script>
+            <div>
+                <div class="articles">
+                    <h3 id="s3">Статья 3</h3>
+                    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Nulla non gravida massa, sit amet
+                        commodo nisi... </p>
+                </div>
+                <div class="articles">
+                    <h3 class="under" id="s4">Статья 4</h3>
+                    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Nulla non gravida massa, sit amet
+                        commodo nisi... </p>
+                </div>
+            </div>
+        </div>
+    </div>
 </body>
+</head>
 
 </html>
