--- a/table/index.html
+++ b/table/index.html
@@ -42,9 +42,8 @@
                     <p>"America the Beautiful” è la nuova serie targata National Geographic disponibile su Disney+ da mercoledì 28 settembre. Ne abbiamo parlato in esclusiva con i produttori Vanessa Berlowitz e Mark Linfield e con il compositore Joseph Trapanese.</p>
                 </div>
                 <div class="articles">
-                    <h3 id="s2">Статья 2</h3>
-                    <p>Lorem Ipsum dolor sit amet, consectetur adipiscing elit. Nulla non gravida massa, sit amet
-                        commodo nisi... </p>
+                    <h3 id="s2">The explosive origins of the Nobel Prizes</h3>
+                    <p>Alfred Nobel, creator of the famous Nobel Prizes, was a paradox: An arms dealer in life, Nobel decided in death to use his dynamite fortune to fund a peaceful foundation.</p>
                 </div>
             </div>
             <div>
